--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -1,15 +1,22 @@
-<div class="container mt-4">
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+<div class="container py-4">
+  <h2 class="text-center mb-4">Featured Artists</h2>
+
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
     <div class="col" *ngFor="let artist of artists">
-      <div class="card h-100">
-        <img [src]="artist.image_url" class="card-img-top" [alt]="artist.name">
-        <div class="card-body">
+      <div class="card h-100 shadow-sm">
+        <img 
+          [src]="artist.image_url" 
+          class="card-img-top" 
+          [alt]="artist.name"
+          style="height: 300px; object-fit: cover;"
+        />
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ artist.name }}</h5>
-          <p class="card-text">{{ artist.bio }}</p>
-          <h6>Albums:</h6>
+          <p class="card-text" style="flex-grow: 1;">{{ artist.bio }}</p>
+          <h6 class="mt-3">Albums:</h6>
           <ul class="list-group list-group-flush">
             <li class="list-group-item" *ngFor="let album of artist.albums">
-              <strong>{{ album.title }}</strong> ({{ album.release_date }}) - {{ album.genre }}
+              <strong>{{ album.title }}</strong> ({{ album.release_date }}) – {{ album.genre }}
             </li>
           </ul>
         </div>
