--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,4 +2,32 @@
     font-weight: bold;
     color: #ffc107 !important;
   }
+  .navbar {
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .nav-custom-link {
+    position: relative;
+    transition: color 0.2s ease-in-out;
+  }
+  
+  .nav-custom-link::after {
+    content: '';
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background-color: #fff;
+    transition: width 0.3s;
+  }
+  
+  .nav-custom-link:hover::after,
+  .nav-custom-link.active::after {
+    width: 100%;
+  }
+  
+  .navbar-brand:hover {
+    text-shadow: 1px 1px 8px rgba(255, 255, 255, 0.2);
+  }
   
