--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-    <a class="navbar-brand" routerLink="/">🎵 Music Store</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/artists" routerLinkActive="active">Artists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/instruments" routerLinkActive="active">Instruments</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm px-4 py-3">
+  <a class="navbar-brand fw-bold fs-4 d-flex align-items-center" routerLink="/">
+    🎵 <span class="ms-2">Music Store</span>
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item mx-2">
+        <a class="nav-link nav-custom-link" routerLink="/artists" routerLinkActive="active">Artists</a>
+      </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link nav-custom-link" routerLink="/instruments" routerLinkActive="active">Instruments</a>
+      </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link nav-custom-link" routerLink="/contact" routerLinkActive="active">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
